2009-11-02  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (without-interrupts): Removed. No longer used.
	* swank-backend.lisp (call-without-interrupts): Removed.
	Update backends accoringly.

2009-11-02  Helmut Eller  <heller@common-lisp.net>

	CCL's lap-functions don't have source-notes but the name often
	has.  E.g. ccl::%fixnum-truncate.  Use names as last resort.

	* swank-ccl.lisp (function-name-source-note): New function.
	(pc-source-location): Use it.

2009-11-02  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (tokenize-symbol-thoroughly): Return NIL
	instead of throwing an error.
	(parse-symbol): Handle null result of tokenize-symbol-thoroughly.

	This fixes a bug reported by Derrell Piper.

2009-10-31  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el (slime-bug): Deleted.

2009-10-31  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el (slime-inside-string-p, slime-inside-comment-p)
	(slime-inside-string-or-comment-p): New.

	* swank-match.lisp: New file. Contains very simple pattern matcher
	from the CMU AI archive.

	* swank-loader.lisp: Compile swank-match.lisp.

	* swank.lisp: Make SWANK package use new SWANK-MATCH package.

2009-10-31  Tobias C. Rittweiler <tcr@freebits.de>

	* swank.lisp (find-symbol-with-status): New.
	(parse-symbol): Use it to correctly parse symbols where only one
	colon is given. Consequences: Autodoc won't display an arglist on
	`(foo:bar |' if BAR is not exported from FOO.

2009-10-31  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (list-threads): Remove thread-description.  Wasn't
	used anymore.
	* swank-backend.lisp (thread-description, set-thread-description):
	Deleted.
	* swank-abcl.lisp: Update accordingly.
	* slime.el (slime-update-threads-buffer, slime-thread-insert):
	Update accordingly.

2009-10-31  Helmut Eller  <heller@common-lisp.net>

	* swank-ccl.lisp (kill-thread): Don't signal conditions.
	* swank-backend.lisp (kill-thread): Update docstring.
